Added functionality to ROS test. Checks if the current version of  ros has project modification, if it does then resets ROS to previous state. Added new Python script to help debugging and to support Mushroom in checking if ROS is modified